--- a/.gitignore
+++ b/.gitignore
@@ -236,3 +236,7 @@ Web4/Schools/SLExtension.dll
 *.exe
 *.zip
 Web4/_bin_deployableAssemblies/
+
+Web4/Data/buildLogs/
+Web4/Data/instr/
+Web/Data/XmlSource/
