--- a/Web4/Web.AppSetting.config
+++ b/Web4/Web.AppSetting.config
@@ -79,9 +79,10 @@
 
   <add key="Chilkat.MailMan" value="SGORDICMAILQ_tPNaZl6U8K3D"/>
   <add key="Chilkat.Mht" value="SGORDICMHT_TQ85okoF8B4v"/>
-  <add key="Email.SmtpHost" value="medea.dialtelecom.cz"/>
-  <add key="Email.SmtpUsername" value="obchod@langmaster.cz"/>
+  <add key="Email.SmtpHost" value="smtp.sendgrid.net"/>
+  <add key="Email.SmtpUsername" value="langmaster-email"/>
+  <add key="Email.SmtpPassword" value="test123_"/>
   <add key="Email.SmtpSsl" value="false"/>
   <add key="Email.StartTLS" value="false"/>
-  <add key="Email.SmtpPort" value="25"/>
+  <add key="Email.SmtpPort" value="587"/>
 </appSettings>
