--- a/.gitignore
+++ b/.gitignore
@@ -238,6 +238,7 @@ Web4/Schools/SLExtension.dll
 Web4/_bin_deployableAssemblies/
 dll/
 
+Web4/signature.bin
 Web4/Data/buildLogs/
 Web4/Data/instr/
 Web4/Data/XmlSource/
