--- a/DataLib/DataLib.csproj
+++ b/DataLib/DataLib.csproj
@@ -50,6 +50,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contexts\NewLMComContext.cs" />
+    <Compile Include="Contexts\Vyzva57.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tables\BlendedCompany.cs" />
     <Compile Include="Tables\BlendedCourseData.cs" />
@@ -83,6 +85,7 @@
       <Name>LMComLib</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
