--- a/Web4/packages.config
+++ b/Web4/packages.config
@@ -1,13 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EcmaScript.Net" version="1.0.1.0" targetFramework="net45" />
+  <package id="EntityFramework.Core" version="7.0.0-beta7" targetFramework="net45" />
+  <package id="EntityFramework.Relational" version="7.0.0-beta7" targetFramework="net45" />
+  <package id="EntityFramework.SqlServer" version="7.0.0-beta7" targetFramework="net45" />
+  <package id="Ix-Async" version="1.2.5" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
+  <package id="Microsoft.Framework.Caching.Abstractions" version="1.0.0-beta7" targetFramework="net45" />
+  <package id="Microsoft.Framework.Caching.Memory" version="1.0.0-beta7" targetFramework="net45" />
+  <package id="Microsoft.Framework.Configuration" version="1.0.0-beta7" targetFramework="net45" />
+  <package id="Microsoft.Framework.Configuration.Abstractions" version="1.0.0-beta7" targetFramework="net45" />
+  <package id="Microsoft.Framework.Configuration.Binder" version="1.0.0-beta7" targetFramework="net45" />
+  <package id="Microsoft.Framework.DependencyInjection" version="1.0.0-beta7" targetFramework="net45" />
+  <package id="Microsoft.Framework.DependencyInjection.Abstractions" version="1.0.0-beta7" targetFramework="net45" />
+  <package id="Microsoft.Framework.Logging" version="1.0.0-beta7" targetFramework="net45" />
+  <package id="Microsoft.Framework.Logging.Abstractions" version="1.0.0-beta7" targetFramework="net45" />
+  <package id="Microsoft.Framework.OptionsModel" version="1.0.0-beta7" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
+  <package id="Remotion.Linq" version="2.0.0-beta-002" targetFramework="net45" />
+  <package id="System.Collections.Immutable" version="1.1.36" targetFramework="net45" />
   <package id="YUICompressor.NET" version="2.7.0.0" targetFramework="net45" />
 </packages>
