--- a/Web4/Web4.csproj
+++ b/Web4/Web4.csproj
@@ -13,7 +13,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>web4</RootNamespace>
     <AssemblyName>web4</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <UseIISExpress>false</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
@@ -214,10 +214,10 @@
     <Reference Include="System.Data">
       <Private>True</Private>
     </Reference>
-    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Drawing">
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Web.Http, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebApi.Core.5.2.3\lib\net45\System.Web.Http.dll</HintPath>
       <Private>True</Private>
@@ -2488,11 +2488,6 @@
     <Compile Include="Author\Author.aspx.designer.cs">
       <DependentUpon>Author.aspx</DependentUpon>
     </Compile>
-    <Compile Include="BlendedAPI\vyzva\Server\ExcelReport.cs" />
-    <Compile Include="BlendedAPI\vyzva\Server\MetaInfo.cs" />
-    <Compile Include="BlendedAPI\vyzva\Server\Lectors.cs" />
-    <Compile Include="BlendedAPI\vyzva\Server\PrepareDemoData.cs" />
-    <Compile Include="BlendedAPI\vyzva\Server\Vyzva57Services.cs" />
     <Compile Include="Code\LibMp3Lame.cs" />
     <Compile Include="Code\NormalizeProjectFile.cs" />
     <Compile Include="Code\Skrivanek.cs" />
@@ -2789,6 +2784,10 @@
     <ProjectReference Include="..\ObjectModel\ObjectModel.csproj">
       <Project>{e88c653d-5518-4b96-9b99-6efbd46a9141}</Project>
       <Name>ObjectModel</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\VyzvaLib\VyzvaLib.csproj">
+      <Project>{88118662-e1e1-49fd-8498-67faacc5726d}</Project>
+      <Name>VyzvaLib</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
