--- a/WebCode/Web.config
+++ b/WebCode/Web.config
@@ -1,8 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  http://go.microsoft.com/fwlink/?LinkId=301879
-  -->
 <configuration>
   <appSettings configSource="Web.AppSetting.config" />
   <connectionStrings configSource="Web.ConnectionStrings.config" />
@@ -10,7 +6,7 @@
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
   </system.web>
-  <system.webServer> 
+  <system.webServer>
     <rewrite>
       <rules>
         <rule name="Preserve" stopProcessing="true">
@@ -21,6 +17,10 @@
           <match url="links.aspx" />
         </rule>
         <rule name="Preserve3" stopProcessing="true">
+          <match url="vyzva57services(.*)" />
+          <action type="None" />
+        </rule>
+        <rule name="Preserve4" stopProcessing="true">
           <match url="service.ashx" />
           <action type="None" />
         </rule>
@@ -32,7 +32,12 @@
     </rewrite>
   </system.webServer>
   <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <!--**** Musi zustat, jinek nefunguje GlobalConfiguration.Configure(WebApiConfig.Register); v global.asax, spatna verze json-->
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
   </runtime>
-  <system.codedom>
-  </system.codedom>
 </configuration>
