--- a/WebCode/Web.config
+++ b/WebCode/Web.config
@@ -10,22 +10,33 @@
     <rewrite>
       <rules>
         <rule name="Preserve" stopProcessing="true">
-          <match url="code/newea.aspx" />
+          <match url="^(code/newea\.aspx|links\.aspx|vyzva57services/(.*)|service\.ashx)$" />
           <action type="None" />
+        </rule>
+        <!--<rule name="Preserve1" stopProcessing="true">
+          <match url="code/newea.aspx" />
         </rule>
         <rule name="Preserve2" stopProcessing="true">
           <match url="links.aspx" />
-        </rule>
-        <rule name="Preserve3" stopProcessing="true">
+        </rule>-->
+        <!--<rule name="Preserve3" stopProcessing="true">   
           <match url="vyzva57services(.*)" />
           <action type="None" />
-        </rule>
-        <rule name="Preserve4" stopProcessing="true">
+        </rule>-->
+        <!--<rule name="Preserve4" stopProcessing="true"> 
           <match url="service.ashx" />
           <action type="None" />
+        </rule>-->
+        <!--<rule name="RedirectJS" stopProcessing="true">
+          <match url="(.js)$" />
+          <action type="Redirect" url="http://localhost/web4/{R:1}" />
+        </rule>-->
+        <rule name="RedirectJS" stopProcessing="true">
+          <match url="^(.*\.js)$" />
+          <action type="Rewrite" url="http://localhost/web4/{R:1}" redirectType="Permanent" />
         </rule>
         <rule name="RedirectAll" stopProcessing="true">
-          <match url="(.*)" />
+          <match url="^(.*)$" />
           <action type="Redirect" url="http://localhost/web4/{R:1}" />
         </rule>
       </rules>
@@ -34,7 +45,6 @@
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <!--**** Musi zustat, jinek nefunguje GlobalConfiguration.Configure(WebApiConfig.Register); v global.asax, spatna verze json-->
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
       </dependentAssembly>
