--- a/DataLib2/App.config
+++ b/DataLib2/App.config
@@ -7,8 +7,9 @@
   <connectionStrings>
     <add name="Container" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=NewLMCom_ef7;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient"/>
     <add name="Vyzva57" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=Vyzva57_ef7;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient"/>
-    <add name="Container-sqlite" connectionString="Data Source=d:\LMCom\rew\Web4\App_Data\NewLMCom_sqlite.s3db"/>
-    <add name="Vyzva57-sqlite" connectionString="Data Source=d:\LMCom\rew\Web4\App_Data\Vyzva57_sqlite.s3db"/>
+
+    <add name="Container-sqlite" connectionString="Data Source=d:\LMCom\rew\WebCode\App_Data\NewLMCom_sqlite.s3db"/>
+    <add name="Vyzva57-sqlite" connectionString="Data Source=d:\LMCom\rew\WebCode\App_Data\Vyzva57_sqlite.s3db"/>
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6"/>
