--- a/WebCode/Web.AppSetting.config
+++ b/WebCode/Web.AppSetting.config
@@ -1,6 +1,8 @@
 <?xml version="1.0"?>
 <appSettings>
-  <add key="DataSourcePath" value="q:\LMCom\" />
+  <add key="Container-sqlite" value="NewLMCom_sqlite.s3db" />
+  <add key="Container-sqlite" value="Vyzva57_sqlite.s3db" />
+  <!--<add key="DataSourcePath" value="q:\LMCom\" />-->
   
   <!--PDF certifikat pro eTestMe-->
   <add key="PDF.Cert.Password" value="xcv456dfg258_" />
