--- a/WebCode/Web.ConnectionStrings.config
+++ b/WebCode/Web.ConnectionStrings.config
@@ -2,7 +2,10 @@
 <connectionStrings>
 
   <add name="Container" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=NewLMCom_ef7;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient"/>
-  <add name="Container-sqlite" connectionString="Data Source=|App_Data|NewLMCom_sqlite.s3db"/>
+  <add name="Vyzva57" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=Vyzva57_ef7;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient" />
+
+  <add name="Container-sqlite" connectionString="Data Source=d:\LMCom\rew\WebCode\App_Data\NewLMCom_sqlite.s3db"/>
+  <add name="Vyzva57-sqlite" connectionString="Data Source=d:\LMCom\rew\WebCode\App_Data\Vyzva57_sqlite.s3db"/>
 
   <!--<add name="Container" connectionString="Data Source=195.250.145.26\MSSQLSERVER,1433;initial catalog=blended;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
   <add name="Vyzva57" connectionString="Data Source=195.250.145.26\MSSQLSERVER,1433;initial catalog=blendedvyzva;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />-->
@@ -11,7 +14,8 @@
   <add name="Vyzva57" connectionString="Data Source=195.250.145.26\MSSQLSERVER,1433;initial catalog=blendedvyzvatest;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />-->
 
   <!--<add name="Container" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=NewLMCom;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient" />
-  <add name="Vyzva57" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=Vyzva57;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient" />-->
+  <add name="Vyzva57" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=Vyzva57;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient" />
+  -->
 
   <!--<add name="AzureContainer" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=AzureLmcom;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient" />
   <add name="ScormExNet35Container" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=NewLMCom;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient" />-->
