--- a/Web4/packages.config
+++ b/Web4/packages.config
@@ -47,4 +47,5 @@
   <package id="System.Text.Encoding.Extensions" version="4.0.0" targetFramework="net46" />
   <package id="System.Threading" version="4.0.0" targetFramework="net46" />
   <package id="YUICompressor.NET" version="2.7.0.0" targetFramework="net46" />
+  <package id="YUICompressor.NET.MSBuild" version="2.7.0.0" targetFramework="net46" />
 </packages>
